Reduce errors when expanding nuclei
Lots of errors were being logged when running StarDist with cell expansion.
It seems these can be addressed with
```
IncrementalDelanayTriangulator.forceConvex(false)
```